--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -23,29 +23,29 @@
 
 -----------------------------------------------------------------*/
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Sora:wght@100..800&display=swap');
-@import url("../fonts/bootstrap-icons-1.1/font/bootstrap-icons.css");
+@import url("../fonts/bootstrap-icons-1.1/font/bootstrap-icons.min.css");
 @import url("bootstrap.min.css");
-@import url("../../plugins/jquery_ui/style.css");
-@import url("animation.css");
-@import url("../../plugins/wow/animate.css");
+@import url("../../plugins/jquery_ui/style.min.css");
+@import url("animation.min.css");
+@import url("../../plugins/wow/animate.min.css");
 @import url("../../plugins/swiper/swiper-bundle.min.css");
 @import url("../../plugins/swiper/swiper-gl.min.css");
-@import url("../../plugins/odometer/odometer-theme-default.css");
-@import url("../../plugins/fancybox/jquery.fancybox.css");
-@import url("../../plugins/flatpickr/flatpickr.css");
-@import url("../../plugins/nice-select/nice-select.css");
-@import url("../../plugins/cursor-effect/cursor-effect.css");
+@import url("../../plugins/odometer/odometer-theme-default.min.css");
+@import url("../../plugins/fancybox/jquery.fancybox.min.css");
+@import url("../../plugins/flatpickr/flatpickr.min.css");
+@import url("../../plugins/nice-select/nice-select.min.css");
+@import url("../../plugins/cursor-effect/cursor-effect.min.css");
 
-@import url("global.css");
-@import url("header.css");
-@import url("footer.css");
-@import url("preloader.css");
-@import url("shop.css");
-@import url("components.css");
-@import url("contact.css");
-@import url("blog.css");
-@import url("sidebar.css");
-@import url("portfolio.css");
-@import url("style.css");
-@import url("responsive.css");
-@import url("light.css");
+@import url("global.min.css");
+@import url("header.min.css");
+@import url("footer.min.css");
+@import url("preloader.min.css");
+@import url("shop.min.css");
+@import url("components.min.css");
+@import url("contact.min.css");
+@import url("blog.min.css");
+@import url("sidebar.min.css");
+@import url("portfolio.min.css");
+@import url("style.min.css");
+@import url("responsive.min.css");
+@import url("light.min.css");
